@@ -1,3 +1,8 @@
+2006-03-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* serial.c: Fix a pair of wrong or incomplete assignations
+	in set_attributes.
+	
 2006-02-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* serial.h: New file with serial port constants.
